--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -4,8 +4,8 @@ $header-height: 30px;
   height: $header-height;
   padding: 30px 0;
   margin-bottom: 100px;
-
   line-height: $header-height;
+
   @media screen and (max-width: 1040px){
     margin-bottom: 50px;
     height: auto;
@@ -13,28 +13,42 @@ $header-height: 30px;
     padding-bottom: 10px;
   }
   @media screen and (max-width: 600px){
-  margin-bottom:40px;
+    margin-bottom:40px;
   }
-  a{
-    color: $color-gray01;
-    @include transition(color 0.3s);
-    &:hover{
-      color: $color-main;
-      border-bottom:none;
-    }
-  }
-  h1{
+
+  h3{
+    font-size: 18px;
+    font-weight: 300;
     margin-top:15px;
-    font-weight: bold;
-    font-size: 48px;
+    line-height: 30px;
     @media screen and (max-width: 1040px){
       float: none;
     }
+
+    a{
+      color: $color-gray01;
+      font-style: italic;
+      @include transition(color 0.3s);
+      &:hover{
+        color: $color-main;
+        border-bottom:none;
+      }
     }
-}
-.menu {
-  ul li {
-    display: inline-block;
-    list-style: none;
+
+    ul {
+      float: right;
+
+      li {
+        font-size: 30px;
+        padding: 0 5px;
+        display: inline-block;
+        list-style: none;
+
+        a {
+          color: grey;
+        }
+      }
+    }
   }
+
 }
