Fixed use LinkedIn link instead of username

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -16,7 +16,7 @@
       </a>
     </li>
     {% endif %}
-    {% if site.linkedin_user %}
+    {% if site.linkedin_link %}
     <li>
       <a href="{{site.linkedin_link}}">
         <i class="fa fa-linkedin"></i>
