--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,5 +1,5 @@
-$font-default: "proxima-nova-1", "proxima-nova-2", "Helvetica Neue", Arial, sans-serif;
-$font-mono: "proxima-nova-1", "proxima-nova-2", "Helvetica Neue", Arial, sans-serif;
+$font-default: "Helvetica Neue", Arial, sans-serif;
+$font-mono: "Helvetica Neue", Arial, sans-serif;
 
 $font-icon: 'FontAwesome';
 
