--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,14 +1,16 @@
 {% if index %}
-  <h2 class="title">
-    {% if post.external-url %}
-    <a href="{{ post.external-url }}">
-    {% else %}
-    <a href="{{ root_url }}{{ post.url }}">
-    {% endif %}
-    {% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
+  {% unless post.hidden %}
+    <h2 class="title">
+      {% if post.external-url %}
+      <a href="{{ post.external-url }}">
+      {% else %}
+      <a href="{{ root_url }}{{ post.url }}">
+      {% endif %}
+      {% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
 
-    <span class="date">{% include post/date.html %}{{ time }}</span>
-  </h2>
+      <span class="date">{% include post/date.html %}{{ time }}</span>
+    </h2>
+  {% endunless %}
 {% else %}
   <div>
     <h2 class="title">
