--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -16,6 +16,13 @@
       </a>
     </li>
     {% endif %}
+    {% if site.flickr_user %}
+    <li>
+      <a href="https://flickr.com/{{site.flickr_user}}">
+        <i class="fa fa-flickr"></i>
+      </a>
+    </li>
+    {% endif %}
     {% if site.linkedin_link %}
     <li>
       <a href="{{site.linkedin_link}}">
